--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.14.0",
-    "mocha": "^3.1.2",
-    "mysql": "^2.12.0"
+    "mysql": "^2.12.0",
+    "mocha": "^3.1.2"
   }
 }
